--- a/style/style.css
+++ b/style/style.css
@@ -182,3 +182,33 @@ iframe {
 
   
 }
+
+
+input[type="color"] {
+  width: 200px;
+  height: 35px;
+  border-radius: 30px;
+  padding-left: 10px;
+  border: none;
+  background-color: #525252;
+}
+
+input[type="color"]::-webkit-color-swatch-wrapper {
+  width: 20px;
+  height: 20px;
+  border: none;
+  border-radius: 50%;
+  padding: 0;
+}
+ 
+input[type="color"]::-webkit-color-swatch {
+  border: none;
+  border-radius: 50%;
+  padding: 0;
+}
+
+input[type="color"]::-webkit-color-swatch-wrapper input[type="text"] {
+  font-size: 14px;
+  padding: 5px;
+  color: #fff;
+}
